--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<h1>Hallo Welt!</h1>
+<div class="slideshow-container">
+  <img *ngIf="showImage" src="assets/img/{{slideshowArray[currentImage]}}" alt="" class="img-slideshow">
+</div>
