added new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,1 @@
-<div class="slideshow-container">
-  <img *ngIf="showImage" src="assets/img/{{slideshowArray[currentImage]}}" alt="" class="img-slideshow">
-</div>
-<div class="slideshow-overlay">
-  <p class="fade-in" *ngIf="showImage">
-    {{ headlineArray[currentImage] }}
-  </p>
-</div>
+<app-slideshow></app-slideshow>
