--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -26,3 +26,18 @@ header {
          }
     }
 }
+
+.darkLinks {
+    a {
+        color: black;
+        
+        &:hover {
+            color: rgba(0, 0, 0, 0.505);
+        }
+    }
+}
+
+.headerDark {
+    background-color: white;
+    box-shadow: 0px 1px 3px 0 rgba(0,0,0,0.2);
+}
