--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,8 +4,7 @@
 
     <div [class.darkLinks]="darkMode">
         <a routerLink="/">Home</a>
-        <a href="#">Curriculum</a>
-        <a href="#">Projects</a>
+        <a href="data-protection">Data Protection</a>
         <a routerLink="/imprint">Imprint</a>
     </div>
 </header>
