--- a/src/app/menu/menu.component.scss
+++ b/src/app/menu/menu.component.scss
@@ -8,11 +8,12 @@ header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-left: 150px;
-    padding-right: 150px;
+    padding-left: 120px;
+    padding-right: 120px;
 
     img {
         height: 50px;
+        cursor: pointer;
     }
 
     a {
